fix nav dropdown left alignment on small devices

--- a/client/assets/stylesheets/modules/nav-dropdown.scss
+++ b/client/assets/stylesheets/modules/nav-dropdown.scss
@@ -45,6 +45,7 @@
     .nav-dropdown {
         .nav-dropdown-menu {
             @include flex-direction(column);
+            left: inherit;
             right: 0;
         }
     }
